--- a/src/index.jade
+++ b/src/index.jade
@@ -12,7 +12,28 @@ html(lang="ja")
     
     link(rel='stylesheet', href='styles/style.css', media='all')
   body
-    h1 Hello Github Pages
+    svg#path(xmlns="http://www.w3.org/2000/svg" height="98" width="581" viewBox="0 0 581 98")
+      path(d="M62.9 14.9c-25-7.74-56.6 4.8-60.4 24.3-3.73 19.6 21.6 35 39.6 37.6 42.8 6.2 72.9-53.4 116-58.9 65-18.2 191 101 215 28.8 5-16.7-7-49.1-34-44-34 11.5-31 46.5-14 69.3 9.38 12.6 24.2 20.6 39.8 22.9 91.4 9.05 102-98.9 176-86.7 18.8 3.81 33 17.3 36.7 34.6 2.01 10.2.124 21.1-5.18 30.1" stroke="black" stroke-width="4.3" fill="none" stroke-dasharray="" stroke-dashoffset="0.00")
 
-    
+    .form
+      span.form__title Animation
+
+      .form__section
+        label.form__heading duration
+        input#js-duration.duration__input(type="range" min=1 max=5 step="0.1" value="2.5")
+        span.duration__value 2s
+
+      .stroke-dasharray.form__section
+        label.form__heading stroke-dasharray
+        input#js-stroke-dasharray.stroke-dasharray__input(type="range" min=0 max=988 step="1" value="998")
+        span.stroke-dasharray__value 998
+
+      .stroke-dashoffset.form__section
+        label.form__heading stroke-offset
+        input#js-stroke-dashoffset.stroke-dashoffset__input(type="range" min=0 max=988 step="1" value="998")
+        span.stroke-dashoffset__value 998
+
+      button#button Start
+      button#reset Reset
+
     script(src='scripts/script.js')
